# adeonbot

./: .gitignore  README.md  stack.yaml
bot/: LICENSE  bot.cabal
bot/exe/: Main.hs
bot/fighting-simulation/: Main.hs
bot/src/Bot/: NetHack.hs
bot/src/Bot/NetHack/: AIEntry.hs  BFS.hs  Config.hs  DecisionMaker.hs  Direction.hs  EdibleCorpses.hs  FightingTactics.hs  InferWorldState.hs  Logs.hs  Messages.hs  MonadAI.hs  ScreenPattern.hs  Search.hs  SelectItem.hs  Synchronizer.hs  WebDiagnostics.hs  WordTools.hs  WorldState.hs
bot/src/Bot/NetHack/InferWorldState/: ItemNameParser.hs  PeacefulCheck.hs
diagnostics/: Makefile  package.json  webpack.config.js
diagnostics/src/: entry.jsx
terminal-emulator/: terminal-emulator.cabal
terminal-emulator/cbits/: pty.c  terminal.c  wcwidth.c
terminal-emulator/passthrough/: Main.hs
terminal-emulator/src/Terminal/: Emulator.hs  Pty.hs  Screen.hs  Terminal.hs
