name:                bot
version:             0.1.0.0
synopsis:            NetHack Bot
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bot.NetHack
                       Bot.NetHack.AIEntry
                       Bot.NetHack.Config
                       Bot.NetHack.Messages
                       Bot.NetHack.MonadAI
                       Bot.NetHack.ScreenPattern
  build-depends:       async
                      ,base >=4.7 && <5.0
                      ,bytestring
                      ,clock
                      ,free
                      ,lens
                      ,mtl
                      ,process
                      ,stm
                      ,terminal-emulator
                      ,text
                      ,transformers
                      ,yaml
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

executable adeonbot
  main-is:             Main.hs
  build-depends:       base
                      ,bot
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m"
  hs-source-dirs:      exe
  default-language:    Haskell2010

