name:                bot
version:             0.1.0.0
synopsis:            NetHack Bot
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bot.NetHack
                       Bot.NetHack.AIEntry
                       Bot.NetHack.BFS
                       Bot.NetHack.Config
                       Bot.NetHack.DecisionMaker
                       Bot.NetHack.InferWorldState
                       Bot.NetHack.InferWorldState.PeacefulCheck
                       Bot.NetHack.Logs
                       Bot.NetHack.Messages
                       Bot.NetHack.MonadAI
                       Bot.NetHack.SelectItem
                       Bot.NetHack.ScreenPattern
                       Bot.NetHack.WorldState
  build-depends:       array
                      ,async
                      ,base >=4.7 && <5.0
                      ,bytestring
                      ,clock
                      ,containers
                      ,free
                      ,lens
                      ,mtl
                      ,process
                      ,regex-tdfa
                      ,stm
                      ,terminal-emulator
                      ,text
                      ,time
                      ,transformers
                      ,yaml
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

executable adeonbot
  main-is:             Main.hs
  build-depends:       base
                      ,bot
  --ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m"
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded
  hs-source-dirs:      exe
  default-language:    Haskell2010

