name:                terminal-emulator
version:             0.1.0.0
synopsis:            Terminal Emulator for Haskell
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Terminal.Screen
                       Terminal.Terminal
  build-depends:       base >=4.7 && <5.0
                      ,array
                      ,bytestring
                      ,cpu
                      ,exceptions
                      ,hashable
                      ,text
                      ,transformers
  hs-source-dirs:      src
  c-sources:           cbits/wcwidth.c
                       cbits/terminal.c
  default-language:    Haskell2010

