name:                terminal-emulator
version:             0.1.0.0
synopsis:            Terminal Emulator for Haskell
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            System
build-type:          Simple
cabal-version:       >=1.10

flag build-passthrough
  description:         Build a diagnostics program that ingests stdin from
                       terminal, interprets it and then outputs it to real
                       terminal. Useful for debugging the terminal emulation
                       actually works.
  default:             False

library
  exposed-modules:     Terminal.Emulator
                       Terminal.Pty
                       Terminal.Screen
                       Terminal.Terminal
  build-depends:       array
                      ,async
                      ,base >=4.7 && <5.0
                      ,bytestring
                      ,cpu
                      ,free
                      ,exceptions
                      ,hashable
                      ,mtl
                      ,process >=1.4.2
                      ,stm
                      ,text
                      ,transformers
                      ,unix
  hs-source-dirs:      src
  c-sources:           cbits/wcwidth.c
                       cbits/terminal.c
                       cbits/pty.c
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

executable terminal-emulator-passthrough
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts
  default-language:    Haskell2010
  hs-source-dirs:      passthrough
  build-depends:       base, terminal-emulator, transformers, mtl, bytestring, stm, async, process

  if flag(build-passthrough)
    buildable: True
  else
    buildable: False


